# Wow64Hook

./: .gitignore  .gitmodules  README.md  build.bat
src/: CMakeLists.txt
src/DianaHook/: DianaHook.cpp  IMemoryReaderWriter.h  MemoryStream.h  StdAfx.h
src/hooker/: DianaHook.h  HookGenerator.cpp  HookGenerator.h  Hooker.cpp  Hooker.h  IMemoryReaderWriter.h  Main.cpp  MemoryProvider.cpp  MemoryProvider.h  MemoryStream.cpp  StdAfx.h  Wow64MemoryReaderWriter.cpp  Wow64MemoryReaderWriter.h
src/wow64extAdapter/: INative.h  StdAfx.h  Wow64Native.cpp  Wow64Native.h  Wow64NativeCreator.h  Wow64Types.h
